--- a/composer.json
+++ b/composer.json
@@ -21,9 +21,16 @@
     "authors": [
         {
             "name": "Erfan Ebrahimi",
-            "email": "me@erfanebrahimi.ir"
+            "email": "me@erfanebrahimi.ir",
+            "homepage": "http://erfanebrahimi.ir/"
         }
     ],
     "minimum-stability": "dev",
-    "require": {}
+    "require": {},
+    "keywords": [
+        "Laravel",
+        "Form",
+        "DynamicForm",
+        "Dynamic"
+    ]
 }
