Revert "add lang file"
This reverts commit 1dea7d8cd868e9d7f721ac8e039c5c134b18acf5.

--- a/composer.json
+++ b/composer.json
@@ -21,16 +21,9 @@
     "authors": [
         {
             "name": "Erfan Ebrahimi",
-            "email": "me@erfanebrahimi.ir",
-            "homepage": "http://erfanebrahimi.ir/"
+            "email": "me@erfanebrahimi.ir"
         }
     ],
     "minimum-stability": "dev",
-    "require": {},
-    "keywords": [
-        "Laravel",
-        "Form",
-        "DynamicForm",
-        "Dynamic"
-    ]
+    "require": {}
 }
